# nifparse

./: .gitmodules  CMakeLists.txt  README.md
generator/: generate_bytecode  generate_nifparse
generator/lib/: expression_parser.rb  generator.rb  nif_basic.rb  nif_bitflags.rb  nif_compound.rb  nif_enum.rb  nif_field.rb  nif_niobject.rb  nif_option.rb  nif_type.rb  nif_version.rb  nifxml.rb
generator/templates/: compound_header.erb  enum.erb  generated_sources.erb  header.erb  source.erb
halffloat/: CMakeLists.txt
nifparse/: CMakeLists.txt
nifparse-test/: CMakeLists.txt  main.cpp
nifparse/include/nifparse/: BytecodeReader.h  ConstantDataStream.h  FileDataStream.h  INIFDataStream.h  NIFFile.h  PrettyPrinter.h  Serializer.h  SerializerContext.h  Symbol.h  SymbolTable.h  TypeDescription.h  Types.h  bytecode.h
nifparse/nifparse/: BytecodeReader.cpp  ConstantDataStream.cpp  FileDataStream.cpp  NIFFile.cpp  PrettyPrinter.cpp  Serializer.cpp  SerializerContext.cpp  Symbol.cpp  SymbolTable.cpp  TypeDescription.cpp  Types.cpp
